gArena/css/esl-one-news.css
/* Header style start */

.header {
	height: 120px;
}

.esl__one-fullinfo {
	display: flex;
	justify-content: space-between;
	font-size: 16px;
	line-height: 22px;
}

.esl__one-group span,
.esl__one-playoff span {
	font-size: 26px;
}

.fullinfo__wrapper {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	order: 1;
}

.esl__one-fullinfo img {
	order: 2;
}

.esl__one-title {
	font-weight: 700;
	font-family: 'Roboto Condensed', sans-serif;
	font-size: 45px;
	text-align: center;
	margin-bottom: 40px;
	margin-top: 20px;
}

.esl__one-pic {
	width: 40%;
	object-fit: cover;
}

.esl__one-info {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 40px;
}

.esl__one-info p {
	display: flex;
	flex-direction: column;
	align-items: center;
	line-height: 22px;
	font-size: 18px;
}

.esl__one-info p span {
	color: #3F915F;
}


/* Header style end */

/* Stream style start */

.stream__twitch {
	display: none;
}

.stream__info {
	margin-top: 40px;
	font-size: 22px;
	background: linear-gradient(90deg, rgba(8, 5, 134, 1) 0%, rgba(130, 0, 62, 1) 40%, rgba(2, 1, 62, 1) 100%);
}

.stream__name {
	display: flex;
	justify-content: space-between;
	padding: 20px;
}

.stream__name .show:hover {
	color: #3F915F;
}

.timer {
	color: rgba(0, 255, 128, 0.8);
}

/* Stream style end */

/* Tabel-group style start */
.group__tabel {
	margin-top: 40px;
}

.group__tabel .row {
	display: grid;
	grid-template-columns: 0.4fr 6fr 1fr 1fr 1fr 1fr;
	grid-template-rows: 1fr;
	font-size: 16px;
	color: white;
	border: 1px white solid;
}

.row div,
.tabel__info {
	padding: 10px;
	display: flex;
	align-items: center;
}

.row img {
	width: 16px;
	margin-right: 5px;
}

.row__team-win {
	background: linear-gradient(90deg, rgba(0, 255, 128, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
}

.row__team-lose {
	background: linear-gradient(90deg, rgba(255, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
}

.row__numb-lose {
	background: rgba(255, 0, 0, 0.8)
}

.row__numb-win {
	background: rgba(0, 255, 128, 0.6)
}

.group__tabel-info,
.tabel__info-hint {
	position: relative;
}

.tabel__info-hint {
	opacity: 0;
	position: absolute;
	bottom: 130%;
	left: 0px;
	background-color: #fff;
	color: blue;
	padding: 5px;
	text-align: center;
	box-shadow: 0 1px 1px rgba(0, 0, 0, .16);
	font-size: 12px;
	transition: .2s ease-in-out;
}

.tabel__info:hover+.tabel__info-hint {
	opacity: 1;
}


.fa-caret-down {
	position: absolute;
	top: 12px;
	color: white;
	left: 8px;
}

.group__tabel p {
	font-size: 16px;
}

.group__tabel-green::before {
	background: rgba(0, 255, 128, 0.8);
	width: 12px;
	height: 12px;
	content: ' ';
	display: inline-block;
	top: 0;
	right: 0;
	color: white;
	border-radius: 50%;
	margin-right: 5px;

}

.group__tabel-red {
	margin-bottom: 10px;
}

.group__tabel-red::before {
	background: rgba(255, 0, 0, 1);
	width: 12px;
	height: 12px;
	content: ' ';
	display: inline-block;
	top: 0;
	right: 0;
	color: white;
	border-radius: 50%;
	margin-right: 5px;

}

/* Tabel-group style end */

/* Tournament__grid style start */

.tournament__round-one ul,
.tournament__grid-bottom .tournament__round-two .match {
	margin-top: 40px;
}

.tournament__grid {
	font-size: 14px;
	color: black;
	overflow: auto;
}

.tournament__grid-wrapper {
	display: block;
	margin-bottom: 40px;
	margin-top: 40px;
}

.tournament__grid-top,
.tournament__grid-bottom {
	display: flex;
	flex-direction: row;
	width: 1170px;
}

.match li {
	background-color: #fff;
	padding-left: 5px;
	margin-bottom: 3px;
	padding: 6px;
	overflow: hidden;
	position: relative;
	margin-left: 20px;
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-between;
}

.match li .score {
	color: #2C7399;
}

.match li img {
	width: 20px;
	vertical-align: middle;
}

.round__number {
	color: #2C7399;
	text-transform: uppercase;
	text-align: center;
	font-size: 16px;
	line-height: 18px;
	font-weight: 700;
	font-family: 'Roboto Condensed', sans-serif;
	margin-bottom: 20px;
}

.tournament__grid-title,
.group__tabel-title {
	color: #fff;
	font-size: 44px;
	font-family: 'GothamProBold';
	text-align: center;
	margin-bottom: 40px;
}

.tournament__grid-top .tournament__round-one,
.tournament__grid-top .tournament__round-two,
.tournament__grid-top .tournament__round-three,
.tournament__grid-top .tournament__round-four,
.tournament__grid-top .tournament__round-five {
	width: 100%;
}

.tournament__grid-bottom {
	margin-top: 20px;
}

.tournament__grid-bottom .tournament__round-one,
.tournament__grid-bottom .tournament__round-two,
.tournament__grid-bottom .tournament__round-three,
.tournament__grid-bottom .tournament__round-four,
.tournament__grid-bottom .tournament__round-five {
	width: 16%;
}

.tournament__grid-bottom .tournament__round-one .match li,
.tournament__round-two .match li,
.tournament__round-three .match li,
.tournament__round-four .match li,
.tournament__round-five .match li {
	opacity: 0.6;
}

.tournament__grid-top .tournament__round-two .match {
	padding-top: 70px;
	padding-bottom: 70px;
}

.tournament__grid-top .tournament__round-three .match {
	padding-top: 160px;
}

.tournament__grid-top .tournament__round-four .match {
	padding-top: 360px;
}

.tournament__grid-top .tournament__round-five .match {
	padding-top: 370px;
	position: relative;
}

.tournament__grid-bottom .tournament__round-three .match {
	padding-top: 45px;
}

.tournament__grid-bottom .tournament__round-four .match {
	padding-top: 30px;
}

.round__number span {
	margin: auto 0 0 0;
	color: #3F915F;
}

.tournament__grid-top .tournament__round-five {
	position: relative;
}

.fa-trophy {
	font-size: 45px;
	z-index: 1;
	position: absolute;
	left: 40%;
	bottom: 70px;
	color: #a0a6a8;
}

/* Tournament__grid style end */

/* ========= Adaptiv start ========= */

@media screen and (max-width: 1200px) {
	.header {
		background: none;
	}
}

@media screen and (max-width: 766px) {
	.esl__one-info p {
		font-size: 16px;
	}

	.esl__one-title,
	.tournament__grid-title,
	.group__tabel-title {
		font-size: 26px;
	}

	.esl__one-info,
	.esl__one-fullinfo,
	.stream__name {
		flex-direction: column;
	}


	.fullinfo__wrapper {
		order: 2;
	}

	.esl__one-fullinfo img {
		order: 1;
		margin-bottom: 20px;
	}

	.esl__one-group {
		margin-bottom: 20px;
	}

	.esl__one-pic {
		width: 100%;
		margin-top: 10px;
	}

	.stream__name {
		justify-content: center;
		align-items: center;
	}

	.stream__name p {
		text-align: center;
		margin-bottom: 5px;
	}

	.esl__one-title,
	.tournament__grid-title,
	.group__tabel-title,
	.esl__one-info,
	.tournament__grid-wrapper,
	.esl__one-group {
		margin-bottom: 20px;
		margin-top: 20px;
	}
}

/* ========= Adaptiv end ========= */

